<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_back"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:fontFamily="@font/lato_bold"
                android:text="@string/tag_pop_exit"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_exitNo"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:background="@drawable/shape_rec_12red"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/no"
                    android:textColor="@color/color_button"
                    android:textSize="14sp"
                    android:onClick="onClick"
                    android:backgroundTint="@color/color_button_light"/>
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tv_exitYes"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:background="@drawable/shape_rec_12red"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>