<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_main_menu"
    tools:context=".presentation.views.Main_menu_page">

    <!--   Top Section-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_Notification"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="2dp"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_notification"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_gravity="end|top"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape_circle"
                android:gravity="center"
                android:maxLines="1"
                android:text="3"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--   Score Section-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lay_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="2dp"
                app:srcCompat="@drawable/ic_circle_outer" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="2dp"
                app:srcCompat="@drawable/ic_circle_inner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_highScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="500"
                    android:textAlignment="center"
                    android:textColor="@color/color_button"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/high_score"
                    android:textAlignment="center"
                    android:textColor="@color/color_black"
                    android:textSize="14sp" />
            </LinearLayout>


        </FrameLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="186dp"
            android:layout_height="170dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_coins"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--   Tag Section-->
    <LinearLayout
        android:id="@+id/lay_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/lay_score">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/txt_jrf_sunday_s"
          />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/txt_supper_quiz"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/txt_play_super_quiz__earn_500_coin" />
    </LinearLayout>

    <!--   End Section-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="26dp"
        android:background="@drawable/shape_rec_main_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay_tags">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:text="@string/tag_tosay_s_quiz_on"/>
        <TextView
            android:id="@+id/gk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:text="@string/tag_general_knowledge"
            android:textStyle="bold"
            android:textColor="@color/color_button"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:text="@string/tag_the_quiz_ends_in"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:background="@drawable/shape_rec_main_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lay_tags">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:gravity="center"
                android:background="@drawable/shape_rec_time_counter"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="Hours"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
               android:gravity="center"
                android:layout_height="64dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/shape_rec_time_counter"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_minute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="12"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="Minute"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rec_time_counter"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_sec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="22"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Seconds"
                    android:textSize="12sp" />
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/btn_play_now"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tag_play_quiz_now"
            android:textSize="18sp"
            android:backgroundTint="@color/color_button"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>